<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/login_photo"
            android:scaleType="centerCrop"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/login_banner" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/inputs"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress"

            android:layout_below="@id/login_image"
            android:hint="@string/email_login"
            android:layout_marginTop="20dp"
            android:layout_marginStart="54dp"

            android:paddingStart="45dp"
            android:layout_marginEnd="54dp">

            <requestFocus/>
        </EditText>
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_email_gray_24dp"
            android:layout_below="@+id/login_image"
            android:layout_marginTop="22dp"
            android:layout_marginStart="55dp"/>


        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/inputs"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:inputType="textPassword"
            android:textSize="16sp"

            android:layout_below="@id/login_email"
            android:hint="@string/password_login"
            android:paddingStart="45dp"

            android:layout_marginTop="10dp"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp"
            />
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_lock_black_24dp"
            android:layout_below="@+id/login_email"
            android:layout_marginTop="12dp"
            android:layout_marginStart="55dp"/>

        <Button
            android:id="@+id/email_login_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/login_password"
            android:layout_marginTop="10dp"
            android:layout_marginStart="71dp"
            android:layout_marginEnd="71dp"
            android:text="@string/login_button"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/buttons"
            android:textColor="@android:color/background_light"/>
        <TextView
            android:id="@+id/forget_password_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_login_button"
            android:text="@string/forgot_password"
            android:padding="4dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/need_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forget_password_link"
            android:text="@string/need_new_account"
            android:padding="4dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/login_using_another"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/need_new_account"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            android:padding="4dp"
            android:text="@string/or_login_using_your"
            android:textAlignment="center"
            android:textStyle="bold" />
        <Button
            android:id="@+id/phone_login_Button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/login_using_another"
            android:layout_marginTop="10dp"
            android:background="@drawable/phone_btn"
            android:layout_marginStart="94dp"
            android:layout_marginEnd="94dp"
            android:text="@string/phone_Button"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="20dp"

           />


    </RelativeLayout>

</ScrollView>