<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/register_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/signup_photo"
            android:scaleType="centerCrop"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/login_banner" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/inputs"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:layout_below="@id/register_image"
            android:hint="@string/email_login"
            android:layout_marginTop="20dp"
            android:layout_marginStart="54dp"
            android:paddingStart="45dp"
            android:layout_marginEnd="54dp">

            <requestFocus/>
        </EditText>
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_email_gray_24dp"
            android:layout_below="@+id/register_image"
            android:layout_marginTop="22dp"
            android:layout_marginStart="55dp"/>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/inputs"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_below="@id/register_email"
            android:hint="@string/password_login"
            android:paddingStart="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp"
            />
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_lock_black_24dp"
            android:layout_below="@+id/register_email"
            android:layout_marginTop="12dp"
            android:layout_marginStart="55dp"/>

        <Button
            android:id="@+id/email_register_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/register_password"
            android:layout_marginTop="10dp"
            android:layout_marginStart="71dp"
            android:layout_marginEnd="71dp"
            android:text="@string/create_account_btn"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/buttons"
            android:textColor="@android:color/background_light"/>
        <TextView
            android:id="@+id/already_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_register_button"
            android:text="@string/already_have_account"
            android:padding="4dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>


    </RelativeLayout>

</ScrollView>